2011-12-03  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24725-1
	- Drop unnecessary patches for trunk
	* PKGBUILD: Cleanup

2011-10-01  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24240-1
	- Apply patches for r24240 to avoid failing build.

2011-09-16  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24224-1
	- Adopted on AUR
