@@ -13,7 +13,7 @@ _svntrunk="http://boinc.berkeley.edu/svn/${_root}/${_mod}"
 _svnmod="${_mod}"
 
 pkgname=boinc-svn
-pkgver=24823
+pkgver=25025
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://boinc.berkeley.edu/"
@@ -67,7 +67,7 @@ build() {
     fi
   fi
 
-  _inclds_gtk2="$(pkg-config --cflags gtk+-2.0)"
+  _inclds_gtk2="$(pkg-config --cflags --libs gtk+-2.0)"
   CFLAGS+=" $_inclds_gtk2 -lX11"
   CXXFLAGS+=" $_inclds_gtk2 -lX11"
 
