@@ -1,13 +1,11 @@
-# Maintainer: Frikilinux <frikilinux at frikilinux.com.ar>
-
 pkgname=minitube
-pkgver=1.6
+pkgver=1.7
 pkgrel=1
 pkgdesc="A native YouTube client in QT. Watch YouTube videos without Flash Player"
-arch=('i686' 'x86_64')
+arch=('any')
 url="http://flavio.tordini.org/minitube"
 license=('GPL3')
-depends=('phonon' 'qt')
+depends=('phonon' 'qt>=4.6')
 optdepends=('phonon-xine: for xine backend'
             'phonon-gstreamer: for gstreamer backend'
             'gstreamer0.10-plugins: to get all videos to play with phonon-gstreamer'
@@ -15,7 +13,7 @@ optdepends=('phonon-xine: for xine backend'
             'phonon-mplayer-git: for mplayer backend (from AUR)')
 install=minitube.install
 source=(http://flavio.tordini.org/files/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('ec1df6e7e92291afab504942e2e0f64eb8ba055de2aeabb534616fd9bd7ecbfc')
+sha256sums=('ceed4b685209a66321c007947aa9f9ce79886978b78d736dd88b77d4c3fbfb9d')
 
 build() {
         cd "${srcdir}"/${pkgname}
