@@ -2,9 +2,9 @@
 # Contributor: realitygaps <realitygaps at yahoo dot com>
 
 pkgname=sublime-text-dev
-pkgver=2.2162
+pkgver=2.2163
 pkgrel=2
-_build=2162
+_build=2163
 pkgdesc="sophisticated text editor for code, html and prose - dev build"
 arch=('i686' 'x86_64')
 url="http://www.sublimetext.com/dev"
@@ -22,12 +22,12 @@ source=(
   sublime-text-dev-icon.png
   subl
 )
-md5sums=('637df12a003a6e16d1e24329c9dde1f0'
+md5sums=('c372fd8794b3fdce9be5b7d5fa19d4af'
          'a263a1c158d8a0cf00262f64e7953e41'
          'd08225e4b82a9de9a8fcbbf2b4aa6c23'
          '6e0b9c2332c1c1dc9e1e28fda391cf54')
 
-[[ "${CARCH}" = i686 ]] && md5sums[0]='e38a9339277ca80a14dea2482db62c22'
+[[ "${CARCH}" = i686 ]] && md5sums[0]='c87a898cc942536bc28132513e06b8c8'
 
 
 build () {
