@@ -1,3 +1,8 @@
+2012-01-11  ponsfoot  <cabezon dot hashimoto at gmail dot com>
+
+	* PKGBUILD 25025-1
+	- Add '--libs' option to the pkg-config gtk+-2.0
+
 2011-12-03  ponsfoot  <cabezon dot hashimoto at gmail dot com>
 
 	* boinc-svn 24725-1
@@ -12,5 +17,5 @@
 2011-09-16  ponsfoot  <cabezon dot hashimoto at gmail dot com>
 
 	* boinc-svn 24224-1
-	- Adopted on AUR
+	- Adopt on AUR
 
